--- a/public/segment/widget_config.json
+++ b/public/segment/widget_config.json
@@ -1,3 +1,20 @@
 {
-	"use": "implicit_flow"
+	"baseUrl": "{{okta_tenant}}",
+	"logo": "{{img_logo_url}}",
+	"clientId": "{{okta_client_id}}",
+	"redirectUri": "{{REDIRECT_URI}}",
+
+	"authScheme": "OAUTH2",
+	"authParams": {
+		"issuer": "{{okta_issuer}}",
+		"responseType": ["id_token"],
+		"responseMode": "fragment",
+		"scope": [
+			"openid",
+			"email",
+			"profile",
+			"address",
+			"phone"
+		]
+	}
 }
