--- a/public/idp_disco_with_tokens/widget_config.json
+++ b/public/idp_disco_with_tokens/widget_config.json
@@ -1,10 +1,10 @@
 {
 	"extends": "implicit_flow",
-	"username": "nick.fury@idpx.com",
 	"features": {
 		"idpDiscovery": true
 	},
 	"idpDiscovery": {
 		"requestContext": "{{REDIRECT_URI}}"
-	}
+	},
+	"username": "nick.fury@idpx.com"
 }
